# Winter2015Class

./: README.md  Winter2015Class_git_auto  Winter2015Class_git_auto.sh
PROG20799/c_program/assign_1/a1-Julio-TainSueiras/: Makefile  Makefile.am  Makefile.in  a.out  assign1.md  config.h  config.status  configure  configure.ac  core.32300  libtool  main.out  test.c
PROG20799/c_program/assign_1/a1-Julio-TainSueiras/autom4te.cache/: output.1  output.2  output.3  output.4  output.5  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5  traces.6
PROG20799/c_program/assign_1/a1-Julio-TainSueiras/src/: Makefile  Makefile.am  Makefile.bak  Makefile.in  a.out  assign1  assign1.c  assign1.c.backup_old  assign1.h  assign1.h.gch  assign1.lo  libassign1.la  main  main.c  tags
PROG20799/c_program/assign_1/a1-Julio-TainSueiras/src/.deps/: assign1.Plo  assign1.Po  main.Po
PROG20799/c_program/assign_1/a1-Julio-TainSueiras/src/.libs/: libassign1.la  libassign1.lai  libassign1.so.0.0.0  main  (+1 more)
PROG20799/c_program/assign_1/a1-Julio-TainSueiras/tests/: Makefile  Makefile.am  Makefile.in  check_assign1  check_assign1.awk  check_assign1.c
PROG20799/c_program/check_tutorial/: Makefile  config.h  config.status  configure  configure.ac  libtool
PROG20799/c_program/check_tutorial/autom4te.cache/: output.1  output.2  output.4  output.6  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5  traces.6  traces.7
PROG20799/c_program/check_tutorial/src/: Makefile  Makefile.in  libmoney.la  main  main.c  money.h  money.lo
PROG20799/c_program/check_tutorial/src/.deps/: main.Po  money.Plo
PROG20799/c_program/check_tutorial/src/.libs/: libmoney.la  libmoney.lai  libmoney.so.0.0.0  main
PROG20799/c_program/check_tutorial/tests/: Makefile  Makefile.in  check_money  check_money.c
PROG20799/c_program/check_tutorial/tests/.deps/: check_money-check_money.Po
PROG20799/c_program/check_tutorial/tests/.libs/: check_money  lt-check_money
PROG20799/c_program/week07/: Makefile.am  Makefile.in  a.out  configure  configure.ac  insert_first_linked_list.c
PROG20799/c_program/week07/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
(+1202 files in other folders)
